<resources>
    <string name="app_name">Movies20221</string>
    <string name="movie_title">Titulo de la pelicula</string>
    <string name="release_date_label">Release date:</string>
    <string name="release_date">30-nov-2020</string>
    <string name="vote_average_label">Vote average:</string>
    <string name="vote_average_text">10</string>
    <string name="summary">Summary</string>
</resources>